test switch vers module remote

--- a/room.html
+++ b/room.html
@@ -11,6 +11,6 @@
     <main>
         <h1>Bienvenue sur la room phenix intégrée via le sdk 1.0</h1>  
     </main>
-	<script src="index.js"></script>
+	<script src="./index.js" type="module"></script>
   </body>
 </html>
