ajout balise gettime + ajout balise script remote ressource

--- a/room.html
+++ b/room.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Test room</title>
     <link rel="stylesheet" href="./style.css">
+    <script>
+        __phenixPageLoadTime = new Date().getTime();
+    </script>
+    <script src="https://dl.phenixrts.com/JsSDK/2022.0.latest/min/channels.js"></script>
   </head>
   <body>
     <main>
