creation d'un element bouton pour tester le mute/unmute prochainement

--- a/room.html
+++ b/room.html
@@ -13,7 +13,13 @@
   </head>
   <body>
     <main>
-        <h1>Bienvenue sur la room phenix intégrée via le sdk 1.0</h1>  
+        <h1>Bienvenue sur la room phenix intégrée via le sdk 1.0 ok</h1>  
+        <p>toto</p>
+        <div
+          class="buttonMikeTools"
+          onclick= "clickEvent()"
+        >
+        </div>  
     </main>
 	<script src="./index.js" type="module"></script>
   </body>
