réorganisation du visuel du prototype, test listener sur le bouton ok

--- a/room.html
+++ b/room.html
@@ -17,9 +17,9 @@
         <p>toto</p>
         <div
           class="buttonMikeTools"
-          onclick= "clickEvent()"
+          id="audioButton"
         >
-        </div>  
+        </div>
     </main>
 	<script src="./index.js" type="module"></script>
   </body>
