pas besoin de callback quand on maitrise l'asyncrone JS à 100% :-)

--- a/room.html
+++ b/room.html
@@ -9,11 +9,12 @@
     <script>
         __phenixPageLoadTime = new Date().getTime();
     </script>
-    <script src="https://dl.phenixrts.com/JsSDK/2022.0.latest/min/channels.js"></script>
+    <!-- <script src="https://dl.phenixrts.com/JsSDK/2022.0.latest/min/channels.js"></script> -->
   </head>
   <body>
     <main>
         <h1>Bienvenue sur la room phenix intégrée via le sdk 1.0 ok</h1>  
+        <video id="myVideoId" width="1280" height="720" autoplay playsinline></video>
         <p>toto</p>
         <div
           class="buttonMikeTools"
